--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap">
     <!-- Add the link to your style.css file -->
     <link rel="stylesheet" href="style.css">
+    <!-- Add the favicon link -->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="quote-container" id="quoteContainer">
